objects/Technical_Error_Email_Group__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Disable_Automatic_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Automatic Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_SMS_count__c</fullName>
        <label>Email/SMS count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <label>Technical Error Email Group</label>
</CustomObject>